# goddard-diets

./: Cargo.toml  index.html  main.py
pkg/: goddard_diets.d.ts  goddard_diets.js  goddard_diets_bg.wasm  goddard_diets_bg.wasm.d.ts  package.json
simple_excel_writer/src/: workbook.rs
src/: lib.rs  main.rs
