[package]
name = "goddard-diets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
calamine = "0.18.0"
ndarray = "0.15.4"
simple_excel_writer = { path = "./simple_excel_writer" }
wasm-bindgen = "0.2.79"
